<resources>
    <string name="app_name">CupofCoffee</string>
    <string name="cup_a_coffee">Cup-A-Coffee</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text"><![CDATA[Taste and See Coffee Shop and Gallery offers a unique coffee house environment unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that), we are a place where you can sit down and enjoy that tailor-made cup of coffee. If you need to work, we have a seating area created specifically for you. If you need to rest, we have a soft-seating area in front of a stone fire place that is perfect for your weary mind and body. We offer a delicious variety of coffee from Safehouse Coffee made by our professionally trained baristas. We have everything from classic coffee to our house made specialty beverages. All of our sauces & syrups are made in-house with all natural ingredients (no chemicals or preservatives) ensuring you the highest quality in taste & health. You can complete your coffee with one of our delicious sweet treats made by our very own baker. We look forward to serving you at Taste & See Coffee Shop and Gallery!]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_coffee">Select a Coffee</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="macchiato">Macchiato</string>
    <string name="continue_">Continue</string>
    <string name="select_a_size">Select a size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="options">Options</string>
    <string name="_2_shots">2 Shots</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="whole_milk">Whole Milk</string>
    <string name="_2_milk">2% Milk</string>
    <string name="non_fat_milk">Non Fat Milk</string>
    <string name="almond_milk">Almond Milk</string>
    <string name="enter_pickup_info">Enter Pickup Info</string>
    <string name="full_name">Full Name</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="phone_number">Phone Number</string>
    <string name="_444_444_444">444-444-444</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="place_order">Place Order</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="_1234123412341234">1234123412341234</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="stars">***</string>
    <string name="order_summary">Order Summary</string>
    <string name="name">Name</string>
    <string name="_00_00_pm">00:00 PM</string>
    <string name="order">Order</string>
    <string name="order_value">Order Value</string>
</resources>